# mprpc

./: README.md
mprpc/: CMakeLists.txt
mprpc/example/: friend.proto  user.proto
mprpc/example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
mprpc/example/caller/: callfriendservice.cc  calluserservice.cc
mprpc/lib/include/: logger.h  mprpcchannel.h  mprpccontroller.h  rpcprovider.h
mprpc/src/: CMakeLists.txt  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpcheader.proto  rpcprovider.cc  zookeeperutil.cc
mprpc/src/include/: lockqueue.h  mprpcapplication.h  mprpcconfig.h  zookeeperutil.h
mprpc/test/protobuf/: a.out  main.cc  test.proto
